# mnist_training_rs

./: .gitignore  Cargo.toml  README.md  mnist_training.py
src/: main.rs  model.rs
